--- a/bookingRoom.html
+++ b/bookingRoom.html
@@ -69,8 +69,8 @@
     <div id="language">
       <button id="themeSwitcher"><img src="SitePics/theme.svg" alt="switchColorTheme" /></button>
       <button id="ruLang" class="buttonLang" lang="ru"><img src="SitePics/ru.svg" alt="ru" /></button>
-      <button id="enLang" class="buttonLang" lang="en"><img src="sitePics/gb.svg" alt="en" /></button>
-      <button id="kzLang" class="buttonLang" lang="kz"><img src="sitePics/kz.svg" alt="kz" /></button>
+      <button id="enLang" class="buttonLang" lang="en"><img src="SitePics/gb.svg" alt="en" /></button>
+      <button id="kzLang" class="buttonLang" lang="kz"><img src="SitePics/kz.svg" alt="kz" /></button>
     </div>
   </div>
 </nav>
