--- a/service.html
+++ b/service.html
@@ -186,7 +186,7 @@
       <article class="roomArticle" id="beautyArticle">
         <div class="roomPhotos">
           <picture class="roomPhoto">
-            <img src="Service/beauty.jpg" />
+            <img src="Service/Beauty.jpg" />
           </picture>
         </div>
         <div class="roomDescription">
