service text fixes

--- a/service.html
+++ b/service.html
@@ -193,11 +193,11 @@
           <p lang="ru" class="infoDescription">
             <mark>Описание:</mark>
             Салон красоты<br />
-            <mark>Часы работы:</mark> Ежедневно с 9-00 до 21-00<br /><br />
+            <mark>Часы работы:</mark> Ежедневно с 10-00 до 20-00<br /><br />
             <mark>Контакты:</mark> <br />
-            <a class="phoneLinkText" href="tel:+77076343424"><span class="emoji">&#128222;</span>+7 (707) 634 34 24</a
+            <a class="phoneLinkText" href="tel:+77079528188"><span class="emoji">&#128222;</span>+7 707 952 81 88</a
             ><br />
-            <a class="phoneLinkText" href="tel:+77142544366"><span class="emoji">&#128222;</span>+7 (7142) 54 43 66</a>
+            
           </p>
         </div>
       </article>
@@ -215,11 +215,11 @@
           <p lang="ru" class="infoDescription">
             <mark>Описание:</mark>
             Парикмахерская<br />
-            <mark>Часы работы:</mark> Ежедневно с 9-00 до 21-00<br /><br />
+            <mark>Часы работы:</mark> Ежедневно с 10-00 до 21-00<br /><br />
             <mark>Контакты:</mark> <br />
-            <a class="phoneLinkText" href="tel:+77076343424"><span class="emoji">&#128222;</span>+7 (707) 634 34 24</a
+            <a class="phoneLinkText" href="tel:+77054500143"><span class="emoji">&#128222;</span>+7 705 450 01 43</a
             ><br />
-            <a class="phoneLinkText" href="tel:+77142544366"><span class="emoji">&#128222;</span>+7 (7142) 54 43 66</a>
+            
           </p>
         </div>
       </article>
@@ -237,11 +237,12 @@
           <p lang="ru" class="infoDescription">
             <mark>Описание:</mark>
             Стоматологический кабинет<br />
-            <mark>Часы работы:</mark> Ежедневно с 9-00 до 21-00<br /><br />
+            <mark>Часы работы:</mark> Пн-Пт с 10-00 до 18-00<br />
+            Сб-Вс с 10-00 до 13-00<br /><br />
             <mark>Контакты:</mark> <br />
-            <a class="phoneLinkText" href="tel:+77076343424"><span class="emoji">&#128222;</span>+7 (707) 634 34 24</a
+            <a class="phoneLinkText" href="tel:+77142545910"><span class="emoji">&#128222;</span>+7 (7142) 54 59 10</a
             ><br />
-            <a class="phoneLinkText" href="tel:+77142544366"><span class="emoji">&#128222;</span>+7 (7142) 54 43 66</a>
+            <a class="phoneLinkText" href="tel:+77478679189"><span class="emoji">&#128222;</span>+7 (747) 867 91 89</a>
           </p>
         </div>
       </article>
