--- a/bookingRoom.html
+++ b/bookingRoom.html
@@ -12,7 +12,7 @@
 
     <title>Hotel_Celinnaya_rooms</title>
   </head>
-
+  <body>
 <!--Header   -->
 
 <nav class="header">
@@ -118,11 +118,11 @@
 </nav>
 
 
-  <body>
+  <main>
     <h3 lang="ru">Бронирование номера</h3>
     <h3 lang="en">Room reservation</h3>
     <h3 lang="kz">Бөлмені брондау</h3>
-    <form id="bookRoomForm" method="post" action="sendEmail.php">
+    <form id="bookRoomForm">
       <div class="InputDiv">
         <div>
           <label for="name">
@@ -131,10 +131,10 @@
             <i lang="kz">Аты</i>
           </label>
 
-          <input type="text" id="name" lang="en" name="firstname" placeholder="Your name.." />
+          <input type="text" id="name" class="invalid" name="firstname" placeholder="Your name.." />
           <div class="warningDiv">
-            <p lang="ru">Имя должно быть настоящим и содержать 2-20 символов</p>
-            <p lang="en">Name must be legit and contain 2-20 characters</p>
+            <p lang="ru">Введите ваше настоящее имя</p>
+            <p lang="en">Enter your real name</p>
             <p lang="kz">Атау нақты болуы керек және 2-20 таңбадан тұруы керек</p>
           </div>
         </div>
@@ -144,10 +144,10 @@
             <i lang="en">Second Name</i>
             <i lang="kz">Тегі</i>
           </label>
-          <input type="text" id="surname" name="secondname" placeholder="Your surname.." />
+          <input type="text" id="surname" class="invalid" name="secondname" placeholder="Your surname.." />
           <div class="warningDiv">
-            <p lang="ru">Фамилия должна быть настоящей и содержать 2-20 символов</p>
-            <p lang="en">Second name must be legit and contain 2-20 characters</p>
+            <p lang="ru">Введите Вашу настоящую фамилию</p>
+            <p lang="en">Enter your real second name</p>
             <p lang="kz">Тегі шынайы болуы керек және 2-20 таңбадан тұруы керек</p>
           </div>
         </div>
@@ -159,7 +159,7 @@
             <i lang="en">E-Mail</i>
             <i lang="kz">Электрондық пошта</i>
           </label>
-          <input type="email" id="email" name="email" placeholder="Your email" />
+          <input type="email" id="email" class="invalid" name="email" placeholder="Your email" />
           <div class="warningDiv">
             <p lang="ru">Введите Вашу настоящую электронную почту, например example@mailbox.com</p>
             <p lang="en">Enter your existing E-Mail, e.g. example@mailbox.com</p>
@@ -172,7 +172,7 @@
             <i lang="en">Phone Number</i>
             <i lang="kz">Телефон нөмірі</i>
           </label>
-          <input type="tel" id="phoneNumber" name="tele" placeholder="Your telephone number" />
+          <input type="tel" id="phoneNumber" class="invalid" name="tele" placeholder="Your telephone number" />
           <div class="warningDiv">
             <p lang="ru">Введите Ваш настоящий телефонный номер, например +7 777 888 9999 или 87778889999</p>
             <p lang="en">Enter your existing phonenumber, e.g. +7 7778889999 or 87778889999</p>
@@ -188,27 +188,39 @@
             <i lang="kz">Келу күні</i>
           </label>
 
-          <input type="date" id="dateArrival" name="dateArrival" min="" />
+          <input type="date" id="dateArrival" class="invalid" name="dateArrival" min="" />
+          <div class="warningDiv">
+            <p lang="ru">Выберите дату заезда</p>
+            <p lang="en">Enter your arrival date</p>
+            <p lang="kz">Выберите дату заезда</p>   
+          </div>
         </div>
-        <div>
+        <div id="departureDiv" class="invalid">
           <label for="halfStay">
             <i lang="ru">Заселение на полсуток</i>
             <i lang="en">Accommodation for half a day</i>
             <i lang="kz">Жарты күн тұру</i>
           </label>
-          <input type="checkbox" id="halfStay" name="halfStay" value="Заселение на полсуток" />
+          <input type="checkbox" id="halfStay" class="invalid" name="halfStay" value="Заселение на полсуток" />
           <div id="stayTimeContainer">
             <label for="stayTime">
               <i lang="ru">Дата отъезда</i>
               <i lang="en">Departure Date</i>
               <i lang="kz">Кету күні</i>
             </label>
-            <input type="date" id="dateDeparture" name="dateDeparture" min="" />
+            <input type="date" id="dateDeparture" class="invalid" name="dateDeparture" min="" />
+            <div class="warningDiv">
+              <p lang="ru">Выберите дату выезда</p>
+              <p lang="en">Enter departure date</p>
+              <p lang="kz">Выберите дату выезда</p>   
+            </div>
           </div>
+
+          
         </div>
       </div>
 
-      <div id="roomsContainer">
+      <div id="roomsContainer" >
         <input type="radio" name="roomType" id="lux" value="Люкс" />
 
         <label for="lux" class="roomTypeLabel"
@@ -220,13 +232,13 @@
           </div>
         </label>
 
-        <input type="radio" name="roomType" id="semiPlus" value="Полуоюкс Плюс" />
+        <input type="radio" name="roomType" id="semiPlus" value="Полулюкс Плюс" />
 
         <label for="semiPlus" class="roomTypeLabel"
           ><div class="roomDiv">
             <i lang="ru">Полулюкс Плюс</i>
             <i lang="en">Junior Suite Plus</i>
-            <i lang="kz">Кіші люкс</i>
+            <i lang="kz">Кіші люкс Плюс</i>
             <i class="stars">&#9733;&#9733;&#9733;&#9733;</i>
           </div>
         </label>
@@ -275,6 +287,7 @@
           </div>
         </label>
       </div>
+     
 
       <label for="userMessage">
         <i lang="ru">Дополнительная информация</i>
@@ -289,10 +302,10 @@
       </textarea>
       <!-- actually brilliant-->
 
-      <button onclick="sendMail(); return false">Send</button>
+      <button id="sendForm">Send</button>
     </form>
     <script type="text/javascript" src="validation.js"></script>
-
+  </main>
     <!--footer-->
 
     <nav class="footer">
