--- a/service.html
+++ b/service.html
@@ -154,13 +154,13 @@
 
             <p lang="en" class="infoDescription">
               <mark>Conference hall rental:</mark> <br />
-              The cost of one hour is 5000 tenge;<br />
-              The cost of one hour with a projector is 6000 tenge;<br />
-              The cost of the hall from 6 hours - 4000 tenge/hour;<br />
-              The cost of the hall for up to 20 people is 4500tng/hour;<br /><br>
+              The cost of one hour is 5000 kzt;<br />
+              The cost of one hour with a projector is 6000 kzt;<br />
+              The cost of the hall from 6 hours - 4000 kzt/hour;<br />
+              The cost of the hall for up to 20 people is 4500 kzt/hour;<br /><br>
               <mark>Discounts for regular customers!</mark><br />
-              The cost of the hall is 4500tng/hour;<br />
-              The cost of the hall with a projector is 5500 tenge/hour;<br /><br />
+              The cost of the hall is 4500 kzt/hour;<br />
+              The cost of the hall with a projector is 5500 kzt/hour;<br /><br />
   
               <mark>Часы работы:</mark> круглосуточно<br /><br />
               <mark>Contacts:</mark></p>
