--- a/bookingRoom.html
+++ b/bookingRoom.html
@@ -403,12 +403,12 @@
             >
           </li>
           <li class="contactUsBottom">
-            <a href="https://vk.com/" target="_blank" rel="noopener"
+            <a href="https://vk.com/celinnaya" target="_blank" rel="noopener"
               ><span><img class="emojiImages" src="SitePics/vk.svg" /></span> VKontanke</a
             >
           </li>
           <li class="contactUsBottom">
-            <a href="https://ok.ru/" target="_blank" rel="noopener"
+            <a href="https://ok.ru/group/70000003316302" target="_blank" rel="noopener"
               ><span><img class="emojiImages" src="SitePics/ok-ru.svg" /> </span> OdnoKlassniki</a
             >
           </li>
