standart new photos

--- a/bookingRoom.html
+++ b/bookingRoom.html
@@ -122,7 +122,7 @@
   <main>
     <h3 lang="ru">Бронирование номера</h3>
     <h3 lang="en">Room reservation</h3>
-    <h3 lang="kz">Бөлмені брондау</h3>
+    <h3 lang="kz">Бөлмені броньдау</h3>
 <!--FORM-->
     <form id="bookRoomForm" onsubmit="return validateInput()" method="post" action="sendEmail.php">
       <div class="InputDiv">
@@ -194,7 +194,7 @@
           <div class="warningDiv">
             <p lang="ru">Выберите дату заезда</p>
             <p lang="en">Enter your arrival date</p>
-            <p lang="kz">Выберите дату заезда</p>   
+            <p lang="kz">Тіркеу күнін таңдаңыз</p>   
           </div>
         </div>
         <div id="departureDiv" class="invalid">
@@ -214,7 +214,7 @@
             <div class="warningDiv">
               <p lang="ru">Выберите дату выезда</p>
               <p lang="en">Enter departure date</p>
-              <p lang="kz">Выберите дату выезда</p>   
+              <p lang="kz">Шығу күнін таңдаңыз</p>   
             </div>
           </div>
 
@@ -240,7 +240,7 @@
           ><div class="roomDiv">
             <i lang="ru">Полулюкс Плюс</i>
             <i lang="en">Junior Suite Plus</i>
-            <i lang="kz">Кіші люкс Плюс</i>
+            <i lang="kz">Жартылай люкс Плюс</i>
             <i class="stars">&#9733;&#9733;&#9733;&#9733;</i>
           </div>
         </label>
@@ -251,7 +251,7 @@
           <div class="roomDiv">
             <i lang="ru">Полулюкс</i>
             <i lang="en">Junior Suite</i>
-            <i lang="kz">Кіші люкс</i>
+            <i lang="kz">Жартылай люкс</i>
             <i class="stars">&#9733;&#9733;&#9733;&#9733;</i>
           </div>
         </label>
@@ -262,7 +262,7 @@
           <div class="roomDiv">
             <i lang="ru">Стандарт двойной</i>
             <i lang="en">Standart Double</i>
-            <i lang="kz">Стандартты қос</i>
+            <i lang="kz">Стандарт қос</i>
             <i class="stars">&#9733;&#9733;&#9733;</i>
           </div>
         </label>
@@ -273,7 +273,7 @@
           <div class="roomDiv">
             <i lang="ru">Стандарт</i>
             <i lang="en">Standart</i>
-            <i lang="kz">Стандартты</i>
+            <i lang="kz">Стандарт</i>
             <i class="stars">&#9733;&#9733;&#9733;</i>
           </div>
         </label>
@@ -284,7 +284,7 @@
           <div class="roomDiv">
             <i lang="ru">Эконом</i>
             <i lang="en">Low Cost</i>
-            <i lang="kz">Төмен баға</i>
+            <i lang="kz">Эконом</i>
             <i class="stars">&#9733;&#9733;</i>
           </div>
         </label>
