--- a/waypoint.html
+++ b/waypoint.html
@@ -124,15 +124,15 @@
       <h3 lang="kz">Селіндік қонақ үйі</h3>
       <p lang="ru">
         Наша гостиница расположена в центре города, в непосредственной близости от главной автостанции и
-        железнодорожного вокзала. Нас легко найти, но для Вашего удобства мы добавили подробный гайд, как до нас добраться.   
+        железнодорожного вокзала. Нас легко найти, но для Вашего удобства мы добавили небольшой гайд, как до нас добраться.   
       </p>
       <p lang="en">
         Our hotel is located in the city center, close to the main bus station and railway station. 
-        We're easy to find, but for your convenience we've included a detailed guide on how to reach us.   
+        We're easy to find, but for your convenience we've included a small guide on how to reach us.   
       </p>
       <p lang="kz">
         Біздің қонақ үй қала орталығында, бас автовокзал мен теміржол вокзалына жақын жерде орналасқан. 
-        Бізді табу оңай, бірақ сізге ыңғайлы болу үшін бізге қалай жетуге болатыны туралы егжей-тегжейлі нұсқаулық қостық.   
+        Бізді табу оңай, бірақ сізге ыңғайлы болу үшін бізге қалай жетуге болатыны туралы шағын нұсқаулық қостық.   
       </p>
 
       
