--- a/food.html
+++ b/food.html
@@ -135,16 +135,29 @@
       <article class="roomArticle" id="rest">
         <div class="roomPhotos">
           <div class="roomPhotosSlides">
-            <input type="radio" name="radioButtonRest" id="rest1" />
+            <input type="radio" name="radioButtonRest" id="rest1" checked/>
             <input type="radio" name="radioButtonRest" id="rest2" />
             <input type="radio" name="radioButtonRest" id="rest3" />
             <picture class="roomPhoto mainPhoto">
+              <source media="(min-width:1400px)" srcset="Service/Restaurant/Rest1_w1280_h856.jpg" alt="Restaraunt photo 1" />
+            <source media="(min-width:700px)" srcset="Service/Restaurant/Rest1_w960_h640.jpg" alt="Restaraunt photo 1" />
+            <source media="(min-width:400px)" srcset="Service/Restaurant/Rest1_w640_h427.jpg" alt="Restaraunt photo 1" />
+            <source media="(min-width:200px)" srcset="Service/Restaurant/Rest1_w320_h214.jpg" alt="Restaraunt photo 1" />
               <img src="Service/Restaurant/Rest1.jpg" alt="Restaraunt photo 1" />
+              
             </picture>
             <picture class="roomPhoto">
+              <source media="(min-width:1400px)" srcset="Service/Restaurant/Rest2_w1280_h856.jpg" alt="Restaraunt photo 2" />
+            <source media="(min-width:700px)" srcset="Service/Restaurant/Rest2_w960_h640.jpg" alt="Restaraunt photo 2" />
+            <source media="(min-width:400px)" srcset="Service/Restaurant/Rest2_w640_h427.jpg" alt="Restaraunt photo 2" />
+            <source media="(min-width:200px)" srcset="Service/Restaurant/Rest2_w320_h214.jpg" alt="Restaraunt photo 2" />
               <img src="Service/Restaurant/Rest2.jpg" alt="Restaraunt photo 2" />
             </picture>
             <picture class="roomPhoto">
+              <source media="(min-width:1400px)" srcset="Service/Restaurant/Rest3_w1280_h856.jpg" alt="Restaraunt photo 3" />
+            <source media="(min-width:700px)" srcset="Service/Restaurant/Rest3_w960_h640.jpg" alt="Restaraunt photo 3" />
+            <source media="(min-width:400px)" srcset="Service/Restaurant/Rest3_w640_h427.jpg" alt="Restaraunt photo 3" />
+            <source media="(min-width:200px)" srcset="Service/Restaurant/Rest3_w320_h214.jpg" alt="Restaraunt photo 3" />
               <img src="Service/Restaurant/Rest3.jpg" alt="Restaraunt photo 3" />
             </picture>
             <div class="sliderManual unfading">
@@ -230,6 +243,10 @@
       <article class="roomArticle" id="lux">
         <div class="roomPhotos">
           <picture class="roomPhoto">
+            <source media="(min-width:1400px)" srcset="Service/Restaurant/CozyCafe.jpeg" alt="Cafe photo" />
+            <source media="(min-width:700px)" srcset="Service/Restaurant/CozyCafe_w960_h640.jpeg" alt="Cafe photo" />
+            <source media="(min-width:400px)" srcset="Service/Restaurant/CozyCafe_w640_h427.jpeg" alt="Cafe photo" />
+            <source media="(min-width:200px)" srcset="Service/Restaurant/CozyCafe_w320_h214.jpeg" alt="Cafe photo" />
             <img src="Service/Restaurant/CozyCafe.jpeg" alt="Cafe" />
           </picture>
         </div>
