--- a/rooms.html
+++ b/rooms.html
@@ -214,7 +214,7 @@
       <article class="roomArticle" id="lux">
         <div class="roomPhotos">
           <div class="roomPhotosSlides">
-            <input type="radio" name="radioButtonLux" id="Lux1" />
+            <input type="radio" name="radioButtonLux" id="Lux1" checked/>
             <input type="radio" name="radioButtonLux" id="Lux2" />
             <input type="radio" name="radioButtonLux" id="Lux3" />
             <input type="radio" name="radioButtonLux" id="Lux4" />
@@ -328,7 +328,7 @@
       <article class="roomArticle" id="semiLuxPlus">
         <div class="roomPhotos">
           <div class="roomPhotosSlides">
-            <input type="radio" name="radioButtonsemiPlus" id="semiPlus1" />
+            <input type="radio" name="radioButtonsemiPlus" id="semiPlus1" checked/>
             <input type="radio" name="radioButtonsemiPlus" id="semiPlus2" />
             <input type="radio" name="radioButtonsemiPlus" id="semiPlus3" />
             <input type="radio" name="radioButtonsemiPlus" id="semiPlus4" />
@@ -523,7 +523,7 @@
       <article class="roomArticle" id="semiLux">
         <div class="roomPhotos">
           <div class="roomPhotosSlides">
-            <input type="radio" name="radioButtonsemiLux" id="semiLux1" />
+            <input type="radio" name="radioButtonsemiLux" id="semiLux1" checked/>
             <input type="radio" name="radioButtonsemiLux" id="semiLux2" />
             <input type="radio" name="radioButtonsemiLux" id="semiLux3" />
             <input type="radio" name="radioButtonsemiLux" id="semiLux4" />
@@ -676,7 +676,7 @@
       <article class="roomArticle" id="standartDuo">
         <div class="roomPhotos">
           <div class="roomPhotosSlides">
-            <input type="radio" name="radioButtonstDuo" id="stDuo1" />
+            <input type="radio" name="radioButtonstDuo" id="stDuo1" checked/>
             <input type="radio" name="radioButtonstDuo" id="stDuo2" />
             <input type="radio" name="radioButtonstDuo" id="stDuo3" />
             <input type="radio" name="radioButtonstDuo" id="stDuo4" />
@@ -864,9 +864,10 @@
       <article class="roomArticle" id="standart">
         <div class="roomPhotos">
           <div class="roomPhotosSlides">
-            <input type="radio" name="radioButtonStandart" id="Standart1" />
+            <input type="radio" name="radioButtonStandart" id="Standart1" checked/>
             <input type="radio" name="radioButtonStandart" id="Standart2" />
             <input type="radio" name="radioButtonStandart" id="Standart3" />
+            <input type="radio" name="radioButtonStandart" id="Standart4" />
             
 
             
@@ -1033,7 +1034,7 @@
       <article class="roomArticle" id="econom">
         <div class="roomPhotos">
           <div class="roomPhotosSlides">
-            <input type="radio" name="radioButtonEconom" id="Econom1" />
+            <input type="radio" name="radioButtonEconom" id="Econom1" checked/>
             <input type="radio" name="radioButtonEconom" id="Econom2" />
             <input type="radio" name="radioButtonEconom" id="Econom3" />
             <input type="radio" name="radioButtonEconom" id="Econom4" />
