--- a/service.html
+++ b/service.html
@@ -135,16 +135,29 @@
       <article class="roomArticle" id="conferenceArticle">
         <div class="roomPhotos">
           <div class="roomPhotosSlides">
-          <input type="radio" name="radioButtonRest" id="Conf1" />
+          <input type="radio" name="radioButtonRest" id="Conf1" checked/>
             <input type="radio" name="radioButtonRest" id="Conf2" />
             <input type="radio" name="radioButtonRest" id="Conf3" />  
           <picture class="roomPhoto mainPhoto">
+
+            <source media="(min-width:1400px)" srcset="Service/ConferenceRoom1_w1280_h856.jpg" alt="ConferenceRoomPhoto1" />
+            <source media="(min-width:700px)" srcset="Service/ConferenceRoom1_w960_h640.jpg" alt="ConferenceRoomPhoto1" />
+            <source media="(min-width:400px)" srcset="Service/ConferenceRoom1_w640_h427.jpg" alt="ConferenceRoomPhoto1" />
+            <source media="(min-width:200px)" srcset="Service/ConferenceRoom1_w320_h214.jpg" alt="ConferenceRoomPhoto1" />
             <img src="Service/ConferenceRoom1.jpg" alt="Conference Room Photo 1" />
           </picture>
           <picture class="roomPhoto">
+            <source media="(min-width:1400px)" srcset="Service/ConferenceRoom2_w1280_h856.jpg" alt="Conference Room Photo2" />
+            <source media="(min-width:700px)" srcset="Service/ConferenceRoom2_w960_h640.jpg" alt="Conference Room Photo2" />
+            <source media="(min-width:400px)" srcset="Service/ConferenceRoom2_w640_h427.jpg" alt="Conference Room Photo2" />
+            <source media="(min-width:200px)" srcset="Service/ConferenceRoom2_w320_h214.jpg" alt="Conference Room Photo 2" />
             <img src="Service/ConferenceRoom2.jpg" alt="Conference Room Photo 2" />
           </picture>
           <picture class="roomPhoto">
+            <source media="(min-width:1400px)" srcset="Service/ConferenceRoom3_w1280_h856.jpg" alt="Conference Room Photo 3" />
+            <source media="(min-width:700px)" srcset="Service/ConferenceRoom3_w960_h640.jpg" alt="Conference Room Photo 3" />
+            <source media="(min-width:400px)" srcset="Service/ConferenceRoom3_w640_h427.jpg" alt="Conference Room Photo 3" />
+            <source media="(min-width:200px)" srcset="Service/ConferenceRoom3_w320_h214.jpg" alt="Conference Room Photo 3" />
             <img src="Service/ConferenceRoom3.jpg" alt="Conference Room Photo 3" />
           </picture>
           <div class="sliderManual unfading">
@@ -208,7 +221,11 @@
       <article class="roomArticle" id="laundryArticle">
         <div class="roomPhotos">
           <picture class="roomPhoto">
-            <img src="Service/Laundry.jpg" alt="Laundry" />
+            <source media="(min-width:1400px)" srcset="Service/Laundry_w1280_h856.jpg" alt="Laundry Photo" />
+            <source media="(min-width:700px)" srcset="Service/Laundry_w960_h640.jpg" alt="Laundry Photo" />
+            <source media="(min-width:400px)" srcset="Service/Laundry_w640_h427.jpg" alt="Laundry photo" />
+            <source media="(min-width:200px)" srcset="Service/Laundry_w320_h214.jpg" alt="Laundry photo" />
+            <img src="Service/Laundry.jpg" alt="Laundry photo" />
           </picture>
         </div>
         <div class="roomDescription">
@@ -244,6 +261,10 @@
       <article class="roomArticle" id="beautyArticle">
         <div class="roomPhotos">
           <picture class="roomPhoto">
+            <source media="(min-width:1400px)" srcset="Service/Beauty_w1280_h856.jpg" alt="Beauty Salon Photo" />
+            <source media="(min-width:700px)" srcset="Service/Beauty_w960_h640.jpg" alt="Beauty Salon Photo" />
+            <source media="(min-width:400px)" srcset="Service/Beauty_w640_h427.jpg" alt="Beauty Salon photo" />
+            <source media="(min-width:200px)" srcset="Service/Beauty_w320_h214.jpg" alt="Beauty Salon photo" />
             <img src="Service/Beauty.jpg" />
           </picture>
         </div>
@@ -278,6 +299,10 @@
       <article class="roomArticle" id="hairdresserArticle">
         <div class="roomPhotos">
           <picture class="roomPhoto">
+            <source media="(min-width:1400px)" srcset="Service/Hairdresser_w1280_h856.jpg" alt="Hairdresser Salon Photo" />
+            <source media="(min-width:700px)" srcset="Service/Hairdresser_w960_h640.jpg" alt="Hairdresser Salon Photo" />
+            <source media="(min-width:400px)" srcset="Service/Hairdresser_w640_h427.jpg" alt="Hairdresser Salon photo" />
+            <source media="(min-width:200px)" srcset="Service/Hairdresser_w320_h214.jpg" alt="Hairdresser Salon photo" />
             <img src="Service/Hairdresser.jpg" alt="Hairdresser" />
           </picture>
         </div>
@@ -311,6 +336,10 @@
       <article class="roomArticle" id="dentistArticle">
         <div class="roomPhotos">
           <picture class="roomPhoto">
+            <source media="(min-width:1400px)" srcset="Service/Dentist_w1280_h856.jpg" alt="Dentist Office Photo" />
+            <source media="(min-width:700px)" srcset="Service/Dentist_w960_h640.jpg" alt="Dentist Office Photo" />
+            <source media="(min-width:400px)" srcset="Service/Dentist_w640_h427.jpg" alt="Dentist Office photo" />
+            <source media="(min-width:200px)" srcset="Service/Dentist_w320_h214.jpg" alt="Dentist Office photo" />
             <img src="Service/Dentist.jpg" alt="Dentist" />
           </picture>
         </div>
