some text changes

--- a/rooms.html
+++ b/rooms.html
@@ -29,7 +29,7 @@
         <i lang="ru"
           ><span class="mapLink"
             ><span class="compass">&#129517;</span>Республика Казахстан<br />г. Костанай,
-            <span class="avoidWrap">ул. Батурсынова, 95</span></span
+            <span class="avoidWrap">ул. Байтурсынова, 95</span></span
           ><br /><a href="tel:+77076343424"><span class="emoji">&#128222;</span>+7 (707) 634 34 24</a><br />
           <a href="tel:+77142544366"><span class="emoji">&#128222;</span>+7 (7142) 54 43 66</a></i
         >
